--- a/ember-forms/index.html
+++ b/ember-forms/index.html
@@ -18,7 +18,7 @@
       window.EmberENV = window.DocsENV.EmberENV;
     </script>
     <script src="assets/vendor.js"></script>
-    <!--<script src="http://localhost:4202/globals/main.js"></script>-->
+    <script src="http://localhost:4202/globals/main.js"></script>
     <script src="assets/docs.js"></script>
     <script>
       window.Docs = require('docs/app')['default'].create(DocsENV.APP);
