--- a/ember-forms/index.html
+++ b/ember-forms/index.html
@@ -3,25 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Docs</title>
+    <title>Formdocs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <base href="/ember-forms/" />
+    <base href="/ember-forms/">
+<meta name="formdocs/config/environment" content="%7B%22modulePrefix%22%3A%22formdocs%22%2C%22environment%22%3A%22development%22%2C%22baseURL%22%3A%22/ember-forms%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22LOG_ACTIVE_GENERATION%22%3Atrue%2C%22LOG_VIEW_LOOKUPS%22%3Atrue%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20%27unsafe-eval%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22exportApplicationGlobal%22%3Atrue%7D">
+
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/docs.css">
+    <link rel="stylesheet" href="assets/formdocs.css">
   </head>
   <body>
-    <script>
-      window.DocsENV = {"environment":"development","baseURL":"/ember-forms","locationType":"auto","EmberENV":{"FEATURES":{}},"APP":{"LOG_ACTIVE_GENERATION":true,"LOG_VIEW_LOOKUPS":true}};
-      window.EmberENV = window.DocsENV.EmberENV;
-    </script>
+    
+
     <script src="assets/vendor.js"></script>
-    <script src="http://localhost:4202/globals/main.js"></script>
-    <script src="assets/docs.js"></script>
-    <script>
-      window.Docs = require('docs/app')['default'].create(DocsENV.APP);
-    </script>
+    <!--<script src="http://localhost:4202/globals/main.js"></script>-->
+    <script src="assets/formdocs.js"></script>
   </body>
 </html>
